--- a/.env
+++ b/.env
@@ -1,20 +1,37 @@
+# 环境配置
+ENV=development
+DEBUG=true
+
+# 密钥配置
+SECRET_KEY=your-super-secret-key-here
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
 # MySQL配置
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=123456
-DB_NAME_ADMIN=admin_service
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=123456
+MYSQL_DATABASE=admin_service
 
 # MongoDB配置
-MONGO_URL=mongodb://localhost:27017
-MONGO_DB=crawler_service
+MONGO_HOST=localhost
+MONGO_PORT=27017
+MONGO_DATABASE=crawler_service
 
 # Redis配置
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
 
-# 服务端口配置
+# 服务配置
+ADMIN_SERVICE_HOST=0.0.0.0
 ADMIN_SERVICE_PORT=8000
+CRAWLER_SERVICE_HOST=0.0.0.0
 CRAWLER_SERVICE_PORT=8001
-SYSTEM_SERVICE_PORT=8002 
+SYSTEM_SERVICE_HOST=0.0.0.0
+SYSTEM_SERVICE_PORT=8002
+
+# 日志配置
+LOG_LEVEL=INFO
+LOG_FORMAT=json 
