--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,41 @@
 # -*- coding: utf-8 -*-
-# 通用依赖
+# Web框架
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-dotenv==0.19.0
-pydantic[email]==2.5.1
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.5
+uvicorn==0.24.0
+typer==0.9.0
 
-# 数据库依赖
-sqlalchemy==2.0.23
+# 数据库驱动
 pymysql==1.1.0
-motor==3.3.2
-pymongo==4.6.1
+sqlalchemy==2.0.23
+motor==3.3.1
+pymongo==4.6.0
 redis==5.0.1
+
+# 异步支持
+aiohttp==3.9.1
+httpx==0.25.2
+
+# 工具库
+python-dotenv==1.0.0
+pydantic==2.5.2
+beautifulsoup4==4.12.2
+python-jose==3.3.0
+passlib==1.7.4
+python-multipart==0.0.6
+email-validator==2.1.0.post1
+
+# 日志和监控
+prometheus-client==0.19.0
+psutil==5.9.6
+
+# 开发工具
+black==23.11.0
+isort==5.12.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
 
 # 爬虫依赖
 requests>=2.31.0
-beautifulsoup4==4.12.2
-aiohttp==3.9.1
-
-# 系统信息依赖
-psutil==5.9.6
 
 # 命令行工具
-typer[all]==0.9.0
-
-# 日志相关
 python-json-logger==2.0.7 
