--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 # -*- coding: utf-8 -*-
 # Web框架
-fastapi==0.104.1
-uvicorn==0.24.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
 typer==0.9.0
 
 # 数据库驱动
-pymysql==1.1.0
-sqlalchemy==2.0.23
+pymysql>=1.0.0
+sqlalchemy>=1.4.0
 motor==3.3.1
 pymongo==4.6.0
 redis==5.0.1
 
 # 异步支持
 aiohttp==3.9.1
-httpx==0.25.2
+httpx>=0.24.0
 
 # 工具库
-python-dotenv==1.0.0
-pydantic==2.5.2
+python-dotenv>=0.19.0
+pydantic>=1.8.0
 beautifulsoup4==4.12.2
 python-jose==3.3.0
 passlib==1.7.4
@@ -38,4 +38,16 @@ pytest-asyncio==0.21.1
 requests>=2.31.0
 
 # 命令行工具
-python-json-logger==2.0.7 
+python-json-logger>=2.0.7
+
+# AI 服务依赖
+sse-starlette>=1.6.0
+transformers>=4.36.0
+torch>=2.0.0
+accelerate>=0.25.0
+
+# 添加日志相关的依赖包
+cryptography>=35.0.0
+
+# Ollama 客户端依赖
+ollama-client>=0.1.0 
