--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=123456
-MYSQL_DATABASE=admin_service
+MYSQL_DATABASE=ai_service
 
 # MongoDB配置
 MONGO_HOST=localhost
@@ -31,6 +31,15 @@ CRAWLER_SERVICE_HOST=0.0.0.0
 CRAWLER_SERVICE_PORT=8001
 SYSTEM_SERVICE_HOST=0.0.0.0
 SYSTEM_SERVICE_PORT=8002
+AI_SERVICE_HOST=0.0.0.0
+AI_SERVICE_PORT=8003
+
+# AI服务配置
+MODEL_NAME=deepseek-coder:1.5b
+OLLAMA_API_BASE=http://localhost:11434
+MODEL_MAX_LENGTH=2048
+MODEL_TEMPERATURE=0.7
+MODEL_TOP_P=0.9
 
 # 日志配置
 LOG_LEVEL=INFO
