--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,10 @@ typer==0.9.0
 
 # 数据库驱动
 pymysql>=1.0.0
-sqlalchemy>=1.4.0
+sqlalchemy>=1.4.23
 motor==3.3.1
-pymongo==4.6.0
-redis==5.0.1
+pymongo>=4.1.1
+redis>=4.1.0
 
 # 异步支持
 aiohttp==3.9.1
@@ -19,14 +19,14 @@ httpx>=0.24.0
 python-dotenv>=0.19.0
 pydantic>=1.8.0
 beautifulsoup4==4.12.2
-python-jose==3.3.0
-passlib==1.7.4
-python-multipart==0.0.6
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.5
 email-validator==2.1.0.post1
 
 # 日志和监控
 prometheus-client==0.19.0
-psutil==5.9.6
+psutil>=5.8.0
 
 # 开发工具
 black==23.11.0
@@ -50,4 +50,10 @@ accelerate>=0.25.0
 cryptography>=35.0.0
 
 # Ollama 客户端依赖
-ollama-client>=0.1.0 
+ollama-client>=0.1.0
+
+# 链路追踪依赖
+opentelemetry-api>=1.11.1
+opentelemetry-sdk>=1.11.1
+opentelemetry-instrumentation-fastapi>=0.30b1
+opentelemetry-exporter-jaeger>=1.11.1 
