fix:优化相关功能

--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@
 ENV=development
 DEBUG=true
 
+# 链路追踪配置
+ENABLE_TRACING=false
+
 # 密钥配置
 SECRET_KEY=your-super-secret-key-here
 JWT_ALGORITHM=HS256
@@ -43,4 +46,16 @@ MODEL_TOP_P=0.9
 
 # 日志配置
 LOG_LEVEL=INFO
-LOG_FORMAT=json 
+LOG_FORMAT=json
+
+# 数据库配置
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=admin_service
+
+# JWT配置
+JWT_SECRET_KEY=your-secret-key-here
+JWT_ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_DAYS=7 
