fix:优化网关功能

--- a/.env
+++ b/.env
@@ -36,6 +36,8 @@ SYSTEM_SERVICE_HOST=0.0.0.0
 SYSTEM_SERVICE_PORT=8002
 AI_SERVICE_HOST=0.0.0.0
 AI_SERVICE_PORT=8003
+GATEWAY_SERVICE_HOST=0.0.0.0
+GATEWAY_SERVICE_PORT=8999
 
 # AI服务配置
 MODEL_NAME=deepseek-coder:1.5b
