--- a/electron_admin/package.json
+++ b/electron_admin/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.7",
+    "echarts": "^6.0.0",
     "ee-core": "2.11.0",
     "electron-updater": "^5.3.0",
     "lodash": "^4.17.21"
